2007-06-25 David Barnett <daviebdawg@gmail.com>
  * [gputils] Added support for p18f2682, p18f2685, p18f4682, and p18f4685

2007-06-22 David Barnett <daviebdawg@gmail.com>
  * Fixed bug in test scripts that prevented failures from being reported
  properly
  * [gpasm] Disabled reporting testing failed if tests in gpasm.mchip fail
  (several have never passed)
  * [gpasm] Added sx.o into test script directory, apparently forgotten
  * [gpvc] Changed 'gpdasm' to 'gpvc' in gpvc usage message

2007-06-22 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed token problem that caused some beginning-of-line directives
  (include, title, subtitle) to be accepted when not followed by whitespace or
  a delimiter

2007-06-21 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed bug #1335511, where redefining a symbol silently corrupts
  the COFF relocations

2007-06-21 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed to return non-zero for invalid command-line arguments

2007-06-20 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Implemented warning for program code overflow
  * [gpasm] Implemented __maxrom directive (but not __badrom)
  * [gputils] Removed 16c747 (doesn't exist) and added 16f747
  * [gputils] Fixed wrong address in 16c771.lkr

2007-06-20 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Minor fix to previous update, assume 0 instead of 1 for "res"
  directive argument (size).

2007-06-19 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed behavior of undefined expressions on the first pass to
  assume 0 as in MPASM (affects strange "differ on second pass" cases like
  bug #1058509)

2007-06-18 David Barnett <daviebdawg@gmail.com>
  * [gpasm] Fixed to allow blank parameters on macro invocation, substituting
  nothing (not even empty quotes) as in MPASM

2007-06-18 David Barnett <daviebdawg@gmail.com>
  * [gplink] Fixed bug #1472396, error on empty comment line in LKR script

2007-06-17 David Barnett <daviebdawg@gmail.com>